/************************************************************************************
 * Copyright (C) 2018-2023 E.R.P. Consultores y Asociados, C.A.                     *
 * Contributor(s): Edwin Betancourt EdwinBetanc0urt@outlook.com                     *
 * This program is free software: you can redistribute it and/or modify             *
 * it under the terms of the GNU General Public License as published by             *
 * the Free Software Foundation, either version 2 of the License, or                *
 * (at your option) any later version.                                              *
 * This program is distributed in the hope that it will be useful,                  *
 * but WITHOUT ANY WARRANTY; without even the implied warranty of                   *
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the                     *
 * GNU General Public License for more details.                                     *
 * You should have received a copy of the GNU General Public License                *
 * along with this program. If not, see <https://www.gnu.org/licenses/>.            *
 ************************************************************************************/
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.spin.backend.grpc.record_management";
option java_outer_classname = "ADempiereRecordManagement";

package record_management;

service RecordManagement {
	rpc ToggleIsActiveRecords(ToggleIsActiveRecordsRequest) returns (ToggleIsActiveRecordsResponse) {}
}

message ToggleIsActiveRecordsRequest {
	string table_name = 1;
	bool is_active = 2;
	string record_uuid = 3;
	int32 record_id = 4;
	repeated string records_uuids = 5;
	repeated int32 records_ids = 6;
}

message ToggleIsActiveRecordsResponse {
	string message = 1;
	int64 total_changes = 2;
}
